Collapse: fixed bug - 箭头切换限于子元素，而不是后代所有元素（嵌套时）

--- a/src/components/collapse.scss
+++ b/src/components/collapse.scss
@@ -14,8 +14,10 @@
     border-bottom: 1px solid $grey-200;
 
     &--active {
-      .at-collapse__icon {
-        transform: rotate(90deg)
+      >.at-collapse__header {
+        .at-collapse__icon {
+          transform: rotate(90deg)
+        }
       }
     }
 
